--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,16 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/public/styles.css" media="screen" title="no title" charset="utf-8">
+    <title>My CRM Site</title>
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
       <h1>Bitmaker CRM</h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/add_contact">Add a Contact</a>
-        <a href="/about">About</a>
-      </nav>
+    <nav >
+      <ul class = "navli">
+      <li><a href="/">Home</a></li>
+      <li><a href="/add_contact">Add a Contact</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
+
+    </nav>
 
     <%= yield %>
 
