CRM web form with HTML & CSS - added edit & delete page worked n contacts page

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ box-sizing: border-box;
 html {
   margin: = 0px;
   padding: 0px;
-
+      list-style-type: none;
 
 }
 h1 {
@@ -35,6 +35,7 @@ nav {
   ul {
       background-color: #00ecd3;
       color: black;
+      list-style-type: none;
 
     }
 
