--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -5,11 +5,10 @@
 
       <ul>
         <% Contact.all.each do |contact| %>
-        <h2> Contact Buddy</h2>
-        <li><%= contact.first_name %> <%= contact.last_name %></li>
         <li><%= contact.email %></li>
-        <li><%= contact.note %> </li>
+        <li><%= contact.first_name %> <%= contact.last_name %></li>
         <% end %>
+        <li><a href="/edit">Edit</a>|<a href="/delete">Delete</a><li>
       </ul>
 
   <!-- <li><a href="/contacts/new">Add a new contacts</a></li>
