--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,8 +10,8 @@
     <nav >
       <ul class = "navli">
       <li><a href="/">Home</a></li>
-      <li><a href="/add_contact">Add a Contact</a></li>
-      <li><a href="/about">About</a></li>
+        <li><a href="/contacts">Add a new contacts</a></li>
+        <li><a href="/about">About</a></li>
     </ul>
 
     </nav>
