--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,11 @@
 <ul>
   <li><a href="/contacts">View all contacts</a></li>
   <!-- please complete me with links to other actions -->
-  <li><a href="/contacts/new">Add a new contacts</a></li>
-  <li><a href="/contacts">Modify an existing contact</a></li>
-  <li><a href="/contacts">Delete a contact</a></li>
-  <li><a href="/contacts">Search by attribute</a></li>
-  <li><a href="/contacts">Exits</a></li>
-</ul>
 
-  
+  <li><a href="/contacts">Modify an existing contact</a></li>
+  <li><a href="/delete">Delete a contact</a></li>
+  <li><a href="/edit">Edit a contact</a></li>
+  <li><a href="/contacts">Search by attribute</a></li>
+
+
+</ul>
