--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,11 +7,11 @@
   </head>
   <body>
       <h1>Bitmaker CRM</h1>
-    <nav >
-      <ul class = "navli">
-      <li><a href="/">Home</a></li>
-        <li><a href="/contacts">Add a new contacts</a></li>
-        <li><a href="/about">About</a></li>
+    <nav>
+      <ul>
+      <li ><a href="/">Home</a></li>
+        <li ><a href="/new">Add a new contacts</a></li>
+        <li ><a href="/about">About</a></li>
     </ul>
 
     </nav>
