--- a/views/contacts_all.erb
+++ b/views/contacts_all.erb
@@ -1,7 +1,7 @@
 <!--
 <ul>
   <li><a href="/contacts">View all contacts</a></li> -->
-    <div>There are <span><%= Contact.all_count %></span> contact</div>
+    <div>There are <span><%= Contact.all %></span> contact</div>
 
       <ul>
 
