--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 
   <li><a href="/contacts">Modify an existing contact</a></li>
   <li><a href="/delete">Delete a contact</a></li>
-  <li><a href="/edit">Edit a contact</a></li>
+  <li><a href="/contacts/:id/edit">Edit a contact</a></li>
   <li><a href="/contacts">Search by attribute</a></li>
 
 
